argocd-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-argocd
  namespace: mfa
spec:
  gateways:
    - apps-gateway
  hosts:
    - argocd.simplifydevopstools.com
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 8080
